--- a/app/src/main/res/layout/fragment_sender.xml
+++ b/app/src/main/res/layout/fragment_sender.xml
@@ -12,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.sunny.youyun.views.loading_view.LoadingView
-        android:id="@+id/shape_loading_view"
+        android:id="@+id/lv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -36,7 +36,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_weight="1"
-        app:layout_constraintBottom_toTopOf="@+id/btn_qr_code"
+        app:layout_constraintBottom_toTopOf="@+id/btnQrCode"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -46,7 +46,7 @@
     </android.support.v7.widget.RecyclerView>
 
     <com.sunny.youyun.views.RichText
-        android:id="@+id/btn_qr_code"
+        android:id="@+id/btnQrCode"
         style="@style/ImageButtonStyle"
         android:layout_marginBottom="18dp"
         android:layout_marginLeft="8dp"
@@ -56,12 +56,12 @@
         app:drawable_height="@dimen/imgBtn_drawable_size"
         app:drawable_src="@drawable/icon_send_code"
         app:drawable_width="@dimen/imgBtn_drawable_size"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_file"
+        app:layout_constraintBottom_toTopOf="@+id/btnAddFile"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <com.sunny.youyun.views.RichText
-        android:id="@+id/btn_add_file"
+        android:id="@+id/btnAddFile"
         style="@style/ImageButtonStyle"
         android:layout_marginBottom="35dp"
         android:layout_marginLeft="8dp"
